Adding final swagger
